fix: pointer-events: none; make clicks on images wrapped in buttons correcly register as a button-click

--- a/src/InputDropdown.module.css
+++ b/src/InputDropdown.module.css
@@ -13,6 +13,10 @@
 
 }
 
+button img {
+  pointer-events: none;
+}
+
 
 .options {
   z-index: 9;
